--- a/views/pages/page.ejs
+++ b/views/pages/page.ejs
@@ -5,7 +5,7 @@
     <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet"><link rel="stylesheet" href="./public/style.css">
-    <title>Document</title>
+    <title>Neo</title>
 </head>
 <body>
     <!-- la NavBar -->
