--- a/views/pages/page.ejs
+++ b/views/pages/page.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
-    <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet"><link rel="stylesheet" href="./public/style.css">
+    <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet"><link rel="stylesheet" href="../../public/style.css">
     <title>Neo</title>
 </head>
 <body>
@@ -58,14 +58,14 @@
     <% } %>
 
     <% if (initialData.name === 'addition') { %>
-        <script> for(var code = 32; code < 127; code++){var chr = String.fromCharCode(code);var line = chr + "\t" + code + "\t" + code.toString(16).toUpperCase();console.log(line);}</script>
+        <script> for(const code = 32; code < 127; code++){const chr = String.fromCharCode(code);const line = chr + "\t" + code + "\t" + code.toString(16).toUpperCase();console.log(line);}</script>
     <% } %>
 
     <% if (initialData.name === 'secretcode') { %>
         <script> window.ENCODE = function(string) {return btoa(string)};console.log("ENCODE('Salut ça va ?') = ", ENCODE("Salut ça va ?"));console.log("ENCODE('Java et toi ?') = ", ENCODE("Java et toi ?"))</script>
     <% } %>
     
-    <script>var initialData =  <%- JSON.stringify(initialData) %></script>
+    <script>const initialData =  <%- JSON.stringify(initialData) %></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script><script type="module" src="./public/index.js"></script>
     </body>
 </html>
