--- a/app/emails/templates/contactRH.pug
+++ b/app/emails/templates/contactRH.pug
@@ -8,3 +8,5 @@ block content
         p joignable au numéro #{candidatTel}
     if(candidatStack)
         p stack technique : #{candidatStack}
+    if(remuneration)
+        p sRémunération souhaitée : #{remuneration}
