feat: add contact button and edit enigma

--- a/views/pages/page.ejs
+++ b/views/pages/page.ejs
@@ -20,11 +20,11 @@
  \/  \/ |_||___/|_| |_| \___/  \_/\_/  
                 </pre>
             </a>
-            <div class="btn">
+            <a href="https://wishow.io/contactez-nous/9ed7d834-677a-47a7-b430-2a6a0dda6878" class="btn">
                 <span>
-                Contact
+                    Contact
                 </span>
-            </div>
+            </a>
         </div>
     </div>
 
