--- a/views/pages/page.ejs
+++ b/views/pages/page.ejs
@@ -39,7 +39,7 @@
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
 
-        gtag('config', 'G-JQ47MXN6FT');
+        gtag('config', 'G-903GCSDCSJ');
     </script>
 
 
