--- a/views/pages/page.ejs
+++ b/views/pages/page.ejs
@@ -22,7 +22,15 @@
                         </span>
                     </div>
                 </div>
+
             </div>
+           
+            <div class="moving">
+                <img class="rabbit" src="/public/images/rabbit.png" alt="Rabbit PNG"/>
+            </div>
+            <hr>
+
+             
         
             <!-- la Console -->
             <section id="typeWriter">
