feat: animation progress

--- a/public/style.css
+++ b/public/style.css
@@ -44,32 +44,49 @@ a { text-decoration:none; color:rgb(99, 253, 136) ;; transition:0.2s; }
 a:hover { text-decoration:none; color:rgb(99, 253, 136) ;; transition:0.2s; }
 
 
-hr {
+.hr {
     border-top: 5px dashed #12BD64;
-	border-bottom: #0E1118;
-    border-left: #0E1118;
-	border-right: #0E1118;
+	width: 50%;
+}
+
+.stepper {
+	background-color: #0E1118;
+}
+
+.stepper1 {
+	left: 543px;
+    position: absolute;
+}
+
+.stepper3 {
+	left: 964px;
+    position: absolute;
+    background-color: #0E1118;
 }
 
 .rabbit {
-	height: 87px;
+	height: 55px;
 	position: relative;
-	animation: MyDiv 3s infinite ease-in;
+	animation: moveRabbit 7s ease-in;
+	animation-play-state: paused;
+	transform: scaleX(-1);
 }
 
-.moving {
-	width: 50px;
-	height: 50px;
+.center_rabbit {
+	margin-top: 50px;
+    height: 27px;
 }
 
-@keyframes MyDiv {
+@keyframes moveRabbit {
 	0%   {left: 0px; top: 0px;}
-	100%  {left: 100px; top: 0px;}
+	100%  {left: 700px; top: 0px;}
   }
 
 #spy {
 	color: rgb(20, 6, 36);
 	align-items: start;
+	background: #0E1118;
+	margin: 0;
 }
 
 #typeWriter {
