--- a/views/pages/page.ejs
+++ b/views/pages/page.ejs
@@ -24,14 +24,16 @@
                 </div>
 
             </div>
-           
-            <div class="moving">
-                <img class="rabbit" src="/public/images/rabbit.png" alt="Rabbit PNG"/>
-            </div>
-            <hr>
 
-             
-        
+            
+            <div class="center_rabbit">
+                <img class="stepper" src="/public/images/stepper.svg" alt="step SVG"/>
+                <img class="stepper1" src="/public/images/stepper1.svg" alt="step SVG"/>
+                <img class="stepper3" src="/public/images/stepper3.svg" alt="step SVG"/>
+                <img class="rabbit" src="/public/images/rabbit.svg" alt="Rabbit SVG"/>
+            </div>
+            <div class="hr"></div>
+
             <!-- la Console -->
             <section id="typeWriter">
             </section>
