--- a/views/pages/page.ejs
+++ b/views/pages/page.ejs
@@ -26,13 +26,24 @@
             </div>
 
             
-            <div class="center_rabbit">
+            <!-- <div class="center_rabbit">
+               
+                
+            </div>
+            <div class="hr"></div> -->
+
+            <div id="progress-bar-container">
+                <div class="progress-bar-child progress">
+                </div>
+                <div class="progress-bar-child shrinker timelapse">
+                    <img class="rabbit" src="/public/images/rabbit.svg" alt="Rabbit SVG"/>
+
+                </div>
+
                 <img class="stepper" src="/public/images/stepper.svg" alt="step SVG"/>
                 <img class="stepper1" src="/public/images/stepper1.svg" alt="step SVG"/>
                 <img class="stepper3" src="/public/images/stepper3.svg" alt="step SVG"/>
-                <img class="rabbit" src="/public/images/rabbit.svg" alt="Rabbit SVG"/>
             </div>
-            <div class="hr"></div>
 
             <!-- la Console -->
             <section id="typeWriter">
