--- a/public/style.css
+++ b/public/style.css
@@ -14,26 +14,22 @@ body {
 	font-weight: 500;
 	font-size: 16px;
 	line-height: 25px;
-
+	position: relative;
 	letter-spacing: 0.15em;
 	color: #12BD64;
-	
-}
-
-.layout {
-	display: flex;
-	justify-content: center;
-	align-items: center;
 	background: #0E1118;
-    width:100%; 
-	height: 100%;
 }
 
 .console {
+	z-index: 9;
+	top: 16%;
+	left: 8%;
 	box-sizing: border-box;
+	position: absolute;
 	width: 84%;
 	height: 68%;
 	padding: 32px;
+	min-width: 250px;
 	
 	background: #0E1118;
 	box-shadow: 0px 0px 64px #000000;
@@ -43,18 +39,13 @@ body {
 a { text-decoration:none; color:rgb(99, 253, 136) ;; transition:0.2s; }
 a:hover { text-decoration:none; color:rgb(99, 253, 136) ;; transition:0.2s; }
 
-#spy {
-	color: rgb(20, 6, 36);
-	align-items: start;
-}
-
 #typeWriter {
 	width: 100%;
 	height: 100%;
 	margin-top: 100px;
-  
+	overflow-y: auto;
 	padding-top: 30px;
-
+	max-height: calc(100% - 214px);
 }
 
 #typeWriter span {
@@ -92,18 +83,21 @@ a:hover { text-decoration:none; color:rgb(99, 253, 136) ;; transition:0.2s; }
 }
 
 #wishow {
-    width: 300px;
+    width: 180px;
 
 }
 
-pre { 
-    text-align:center; 
+#spy {
+	position: absolute;
+	z-index: 8; 
     font-size:0.60em;
+	line-height: normal;
 }
 
 .navbar {
     display: flex;
     justify-content: center;
+	height: 50px;
 }
 
 .navbar__content {
@@ -142,4 +136,15 @@ pre {
 	height: 100%;
 	transition: background .5s ease;
 	width: 100%;
+}
+
+@media screen and (max-width: 600px) {
+	.console {
+		top: 10%;
+		height: 80%;
+	}
+	#wishow {
+		visibility: hidden;
+		width: 0px;
+	}
 }
