--- a/views/pages/page.ejs
+++ b/views/pages/page.ejs
@@ -24,7 +24,9 @@
         </div>
     
         <!-- la Console -->
-        <section id="typeWriter">
+        <section class="writer-container">
+            <div id="typeWriter">
+            </div>    
         </section>
     </div>
 
