--- a/views/pages/page.ejs
+++ b/views/pages/page.ejs
@@ -23,7 +23,9 @@
             </div>
         </div>
     
-        <!-- la Console -->
+        <div style="height: 20%;">
+
+        </div>
         <section class="writer-container">
             <div id="typeWriter">
             </div>    
