--- a/views/pages/page.ejs
+++ b/views/pages/page.ejs
@@ -14,12 +14,12 @@
                 <a id="wishow">
                     <img src="/public/images/Wishow.svg" alt="My Happy SVG"/>
                 </a>
-                <div class="btn" href="mailto:olivier.bazin@wishow.io?cc=nassim.benhouidga@wishow.io">
+                <a class="btn" href="mailto:olivier.bazin@wishow.io?cc=nassim.benhouidga@wishow.io">
                     <img src="/public/images/Vector.svg" alt="My Happy SVG"/>
                     <span>
                     Contacter
                     </span>
-                </div>
+                </a>
             </div>
         </div>
     
