--- a/views/pages/page.ejs
+++ b/views/pages/page.ejs
@@ -8,29 +8,32 @@
     <title>Neo</title>
 </head>
 <body>
-    <div class="console">
-        <div class="navbar">
-            <div class="navbar__content">
-                <a id="wishow">
-                    <img src="/public/images/Wishow.svg" alt="My Happy SVG"/>
-                </a>
-                <a class="btn" href="mailto:olivier.bazin@wishow.io?cc=nassim.benhouidga@wishow.io">
-                    <img src="/public/images/Vector.svg" alt="My Happy SVG"/>
-                    <span>
-                    Contacter
-                    </span>
-                </a>
+    <div class="layout">
+        <div class="console">
+            <div class="navbar">
+                <div class="navbar__content">
+                    <a id="wishow">
+                        <img src="/public/images/Wishow.svg" alt="My Happy SVG"/>
+                    </a>
+                    <a class="btn" href="mailto:olivier.bazin@wishow.io?cc=nassim.benhouidga@wishow.io">
+                        <img src="/public/images/Vector.svg" alt="My Happy SVG"/>
+                        <span>
+                        Contacter
+                        </span>
+                    </a>
+                </div>
             </div>
-        </div>
+        
+            <div style="height: 20%;">
     
-        <div style="height: 20%;">
-
+            </div>
+            <section class="writer-container">
+                <div id="typeWriter">
+                </div>    
+            </section>
         </div>
-        <section class="writer-container">
-            <div id="typeWriter">
-            </div>    
-        </section>
     </div>
+
 
 
     <!-- Google tag (gtag.js) -->
