--- a/public/style.css
+++ b/public/style.css
@@ -20,16 +20,24 @@ body {
 	background: #0E1118;
 }
 
-.console {
+.layout {
 	z-index: 9;
-	top: 16%;
-	left: 8%;
-	box-sizing: border-box;
 	position: absolute;
+	width: 100%;
+	height: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.console {
+	box-sizing: border-box;
 	width: 84%;
 	height: 68%;
-	padding: 32px;
 	min-width: 250px;
+	max-width: 1645px;
+	padding: 32px;
+
 	
 	background: #0E1118;
 	box-shadow: 0px 0px 64px #000000;
@@ -106,7 +114,7 @@ a:hover { text-decoration:none; color:rgb(99, 253, 136) ;; transition:0.2s; }
 .navbar__content {
     display: flex;
     justify-content: space-between;
-    width: 1645px;
+    width : 1000%;
 }
 
 .btn {
