--- a/views/pages/page.ejs
+++ b/views/pages/page.ejs
@@ -22,15 +22,8 @@
                         </span>
                     </div>
                 </div>
-
             </div>
 
-            
-            <!-- <div class="center_rabbit">
-               
-                
-            </div>
-            <div class="hr"></div> -->
 
             <div id="progress-bar-container">
                 <div class="progress-bar-child progress">
@@ -40,7 +33,10 @@
 
                 </div>
 
-                <img class="stepper" src="/public/images/stepper.svg" alt="step SVG"/>
+                <div class="center-item">
+                    <img class="stepper" src="/public/images/stepper.svg" alt="step SVG"/>
+                    <p>Éveillé</p>
+                </div>
                 <img class="stepper1" src="/public/images/stepper1.svg" alt="step SVG"/>
                 <img class="stepper3" src="/public/images/stepper3.svg" alt="step SVG"/>
             </div>
