--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -11,48 +11,16 @@
     <script>
         let enigmes = <%- JSON.stringify(enigmes) %>;
         let candidats = <%- JSON.stringify(candidats) %>;
-        let candidatsFinal = <%- JSON.stringify(candidatsFinal) %>;
         let visitsDates = <%- JSON.stringify(visitsDates) %>;
         let days = <%- JSON.stringify(days) %>;
         let semaines = <%- JSON.stringify(semaines) %>;
+        let eveille = <%- JSON.stringify(eveille) %>;
+        let agent = <%- JSON.stringify(agent) %>;
+        let elu = <%- JSON.stringify(elu) %>;
         </script>
     <script type="module" src="./public/dashboard.js"></script>
     <button id="delete">Supprimer le cas de test local</button>
     <h1 class="text_center">Nombre total de candidat : <%= candidats.length %></h1>
-    <h1 class="text_center">Nombre de candidat allant jusqu'au bout (ratio en %): <%= candidatsFinal.length %> (<%= (candidatsFinal.length / (candidats.length)) * 100 %>)</h1>
-    <h2 class="text_center">Résultats des candidats ayant été jusqu'à la validation des données contact</h2>
-    <table>
-        <thead>
-            <th>Nom/Prenom (ou Prenom/Nom)</th>
-            <th>Email</th>
-            <th>Téléphone</th>
-            <th>Stack technique</th>
-            <th>Rémunération souhaitée</th>
-            <th>Enigmes réussies</th>
-            <th>Enigmes échouées</th>
-        </thead>
-        <tbody>
-            <% for(var i=0; i < candidatsFinal.length; i++) { %>
-                <tr>
-                  <td><%= candidatsFinal[i].name %></td>
-                  <td><%= candidatsFinal[i].email %></td>
-                  <td><%= candidatsFinal[i].tel %></td>
-                  <td><%= candidatsFinal[i].stack %></td>
-                  <td><%= candidatsFinal[i].remuneration %></td>
-                  <td>
-                      <% for(var r=0; r < candidatsFinal[i].enigmesReussies.length; r++) { %>
-                        <%= candidatsFinal[i].enigmesReussies[r] %>
-                      <% } %>
-                  </td>
-                  <td>
-                      <% for(var f=0; f < candidatsFinal[i].enigmesFailed.length; f++) { %>
-                        <%= candidatsFinal[i].enigmesFailed[f] %>
-                      <% } %>
-                  </td>
-                </tr>
-             <% } %>
-        </tbody>
-    </table>
     <h2 class="text_center">Visites au cours des derniers jours</h2>
     <table>
         <thead>
@@ -83,20 +51,23 @@
             </tr>
         </tbody>
     </table>
+    <h2 class="text_center">Taux de candidats ayant atteint le badge eveillé: <%= Math.round((eveille / candidats.length) * 100)%>%</h2>
+    <h2 class="text_center">Taux de candidats ayant atteint le badge agent: <%= Math.round((agent / candidats.length) * 100)%>%</h2>
+    <h2 class="text_center">Taux de candidats ayant atteint le badge elu: <%= Math.round((elu / candidats.length) * 100)%>%</h2>
     <h2 class="text_center">Taux de réussite/échec aux énigmes</h2>
     <table class="margin_auto">
         <thead>
             <th>Enigme</th>
-            <th>Réussite(s) [nombre & (%)]</th>
-            <th>Echec(s) [nombre & (%)]</th>
+            <th>Réussite(s)</th>
+            <th>Echec(s)</th>
             <th>Essais total</th>
         </thead>
         <tbody>
             <% for(var i=0; i < enigmes.length; i++) { %>
                 <tr>
                     <td><%= enigmes[i].name %></td>
-                    <td><%= enigmes[i].numberReussie %> (<%= (enigmes[i].numberReussie / (enigmes[i].numberReussie + enigmes[i].numberFailed)) * 100%>)</td>
-                    <td><%= enigmes[i].numberFailed %> (<%= (enigmes[i].numberFailed / (enigmes[i].numberReussie + enigmes[i].numberFailed)) * 100%>)</td>
+                    <td><%= Math.round((enigmes[i].numberReussie / (enigmes[i].numberReussie + enigmes[i].numberFailed)) * 100) %>%</td>
+                    <td><%= Math.round((enigmes[i].numberFailed / (enigmes[i].numberReussie + enigmes[i].numberFailed)) * 100) %>%</td>
                     <td><%= enigmes[i].numberReussie+enigmes[i].numberFailed %></td>
                 </tr>
             <% } %>
