--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -11,6 +11,7 @@
     <script>
         let enigmes = <%- JSON.stringify(enigmes) %>;
         let candidats = <%- JSON.stringify(candidats) %>;
+        let candidatsFinal = <%- JSON.stringify(candidatsFinal) %>;
         let visitsDates = <%- JSON.stringify(visitsDates) %>;
         let days = <%- JSON.stringify(days) %>;
         let semaines = <%- JSON.stringify(semaines) %>;
@@ -22,7 +23,7 @@
     <button id="delete">Supprimer le cas de test local</button>
     <h1 class="text_center">Nombre total de candidat : <%= candidats.length %></h1>
     <h2 class="text_center">Visites au cours des derniers jours</h2>
-    <table>
+    <table class="margin_auto">
         <thead>
             <% for(var i=0; i < days.length; i++) { %>
                 <th class="jour"><%= days[i] %></th>
@@ -31,7 +32,7 @@
         <tbody>
             <tr>
                 <% for(var i=0; i < days.length; i++) { %>
-                    <td class="jour"><%= visitsDates[days[i]] %></td>
+                    <td class="jour"><%= visitsDates[days[i]] > 0 ? visitsDates[days[i]] : 0 %></td>
                  <% } %>
             </tr>
         </tbody>
@@ -46,14 +47,28 @@
         <tbody>
             <tr>
                 <% for(var i=0; i < semaines.length; i++) { %>
-                    <td class="semaine"><%= visitsDates[semaines[i]] %></td>
+                    <td class="semaine"><%= visitsDates[semaines[i]] > 0 ? visitsDates[semaines[i]] : 0 %></td>
                  <% } %>
             </tr>
         </tbody>
     </table>
-    <h2 class="text_center">Taux de candidats ayant atteint le badge eveillé: <%= Math.round((eveille / candidats.length) * 100)%>%</h2>
-    <h2 class="text_center">Taux de candidats ayant atteint le badge agent: <%= Math.round((agent / candidats.length) * 100)%>%</h2>
-    <h2 class="text_center">Taux de candidats ayant atteint le badge elu: <%= Math.round((elu / candidats.length) * 100)%>%</h2>
+    <h2 class="text_center">Pourcentages des étapes</h2>
+    <table class="margin_auto">
+        <thead>
+            <th>badge eveillé</th>
+            <th>badge agent</th>
+            <th>badge elu</th>
+            <th>candidats ayant renseigné leurs données contact</th>
+        </thead>
+        <tbody>
+            <tr>
+                <td class="semaine"><%= Math.round((eveille / candidats.length) * 100)%>%</td>
+                <td class="semaine"><%= Math.round((agent / candidats.length) * 100)%>%</td>
+                <td class="semaine"><%= Math.round((elu / candidats.length) * 100)%>%</td>
+                <td class="semaine"><%= Math.round((candidatsFinal.length / candidats.length) * 100) %>%</td>        
+            </tr>
+        </tbody>
+    </table>
     <h2 class="text_center">Taux de réussite/échec aux énigmes</h2>
     <table class="margin_auto">
         <thead>
